# ChecMatE

./: README.md  pyproject.toml
checmate/: __init__.py  main.py
checmate/posttask/: Q_process.py  plot.py  process.py
checmate/posttask/.ipynb_checkpoints/: process-checkpoint.py
checmate/pretask/: inputs.py  sets.py
checmate/pretask/template/: AsapSet.yaml  Cp2kRelaxInput.json  Cp2kStaticInput.json  DPTrainInput.json  LammpsSet.txt  LaspInSet.yaml  MachineSet.yaml  ResourcesSet.yaml  SumoSet.yaml  VaspRelaxSet.yaml  VaspStaticSet.yaml
checmate/runtask/: parallel.py  run.py
checmate/runtask/generator/: __init__.py  cp2k.py  dp.py  lammps.py  lasp.py  vasp.py
checmate/unittask/: dp.py  fp.py  lammps.py  ssw.py
checmate/utils/: data.py  utils.py
checmate/utils/tools/: asap.py  elastic.py  pmg.py  sumo.py
checmate/workflow/: base.py  wf_explore.py  wf_gen_mlps.py  wf_init_data.py
examples/CaSi/dataset_initialization/: init_setting.json
examples/CaSi/mlp_generation/: setting.json
examples/CaSi/structural_exploration/: setting.json
tests/: beta-Ga2O3.cif  conftest.py
tests/dataset/In10Ga14O36/: type.raw  type_map.raw
tests/posttask/: test_process.py
tests/pretask/: setting.json  test_inputs.py  test_sets.py
tests/runtask/: CONTCAR  test_generator.py  test_parallel.py  test_run.py
tests/traj_test/: all.arc  lasp.out  model_devi.out
tests/unittask/: test_dp.py  test_fp.py  test_ssw.py
tests/utils/: KPOINTS  test_tools.py
tests/workflow/: gen_mlps_setting.json  test_wf_explore.py  test_wf_gen_mlps.py  test_wf_init_data.py
(+20 files in other folders)
