[tool.poetry]
name = "checmate"
version = "0.1.0"
description = ""
authors = ["yxguo1021 <yxguo2020@stu.xmu.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asaplib = "0.0.2"
ase = "3.22.1"
dpdata = "^0.2.13"
requests = "2.25.1"
dpdispatcher = "0.4.18"
pymatgen = "2022.9.21"
sumo = "2.3.3"
pydantic = "^1.10.5"
fire = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"


[[tool.poetry.source]]
# name = "aliyun"
# url = "https://mirrors.aliyun.com/pypi/simple"
# name = "tsinghua"
# url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
default = true
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
checmate = "checmate.main:main"
